[gd_scene load_steps=3 format=3 uid="uid://o7xfbpeu8vh"]

[ext_resource type="Script" path="res://MENU_SYSTEM/main.gd" id="1_2suer"]
[ext_resource type="Texture2D" uid="uid://dmbnb4mys8xdl" path="res://MENU_SYSTEM/knight_logo.png" id="2_h2bhx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2suer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_h2bhx")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Knights Age"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Daily Message"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
